log
Fri, Mar 28, 2025  9:04:30 PM: 
 tests:  0|6
total_score: 0/70
25021aa
Fri, Mar 28, 2025  9:35:32 PM: 
 list.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'createList':
list.c:33:5: error: unknown type name 'list'
     list *list = (list*) malloc (sizeof(list));
     ^~~~
list.c:33:24: error: expected expression before ')' token
     list *list = (list*) malloc (sizeof(list));
                        ^
list.c:34:9: error: request for member 'head' in something not a structure or union
     list->head = NULL;
         ^~
list.c:35:9: error: request for member 'tail' in something not a structure or union
     list->tail = NULL;
         ^~
list.c:36:9: error: request for member 'current' in something not a structure or union
     list->current = NULL;
         ^~
list.c:37:12: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
     return list;
            ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
aa47192
Fri, Mar 28, 2025  9:51:09 PM: 
 list.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
In file included from test.c:5:0:
list.c: In function 'createList':
list.c:37:12: error: expected expression before 'List'
     return List;
            ^~~~
list.c:38:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
36a643d
Fri, Mar 28, 2025  9:52:47 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
2817769
Fri, Mar 28, 2025 10:02:37 PM: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
0c837e5
Fri, Mar 28, 2025 10:07:48 PM: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  2|5
total_score: 15/70
294a789
